Tweaks and stuff for Russia, Annexations,, World news

--- a/localisation/KR_Russia_l_english.yml
+++ b/localisation/KR_Russia_l_english.yml
@@ -465,8 +465,6 @@ RUS_WRA_IND1:0 "Korporatsiya Yusupova"
 RUS_WRA_IND1_desc:0 "'Korporatsiya Yusupova' (Yusupov's Corporation), an united civil and military engineering organisation has launched several industrial projects, which will reduce the dependence from the German goods, provide our army with the new arms and help us to change the rate of the unemployment. But it is necessary to provide his corporation with the legal privileges to compete with the foreign factories."
 RUS_WRA_IND2:0 "ZIR"
 RUS_WRA_IND2_desc:0 "'Zavod imeni Ryabushinskogo' or just 'ZIR' ('Ryabushinsky Plant') was founded in 1916 in Moscow and produced 1.5 tonne trucks for the Russian Army. We should expand this factory, because the reorganisation of our industry and agriculture can't be executed without many cheap and modern trucks. These work places with the decent salary will allow us to reduce unemployment in the Moscow."
-#RUS_WRA_IND3:0 "Russian Railways"
-#RUS_WRA_IND3_desc:0 "In the mid-1920s the Russian railways were privatised by more than 20 joint-stock companies, which often couldn't improve the railroads and extended them so steadily as in the Tsarist era. Savinkov proposed to create Ministry of Railways, which will nationalise most of these companies and also will be able to get government subsidies under our direct control."
 RUS_WRA_NG1:0 "Natsgvardiya"
 RUS_WRA_NG1_desc:0 "The Combat Squads of the NRPR helped us to restore order in the country, but now it is the right time to expand the Squads into 'Natsgvardiya' ('National Guard'), which will defend Russia from the various external threats. We are sure, that the professional soldiers of the 'Natsgvardiya' will become an example for the whole Russian Army."
 RUS_WRA_LA1:0 "Labour Army"
@@ -491,6 +489,8 @@ RUS_state_revanchism_desc:0 "Now that Russia has stabilised and grown stronger u
 
 RUS_more_resources:0 "Resources Program"
 RUS_more_resources_desc:0 "Minerals are numerous in Russia and can boost the economy rapidly. That's why we have to initiate an extraction of the various minerals in the whole country."
+RUS_more_infrastructure:0 "Russian Railways"
+RUS_more_infrastructure_desc:0 "In the mid-1920s the Russian railways were privatised by more than 20 joint-stock companies, which often couldn't improve the railroads and extended them so steadily as in the Tsarist era. Some reforms will have to be done to improve our decadent railway system and reorganise its current management."
 rus_special_unlock_tooltip:0 "You must take the 6 focuses of an industrial path to unlock this"
 RUS_nuclear_effort:0 "Kremlin Project"
 RUS_nuclear_effort_desc:0 "We must avoid lagging behind our rivals in nuclear fission, the most advanced of modern sciences."
