Pic for petrograd, syndie flags, portraits and minor russian tweaks

--- a/localisation/KR_Terrain_l_english.yml
+++ b/localisation/KR_Terrain_l_english.yml
@@ -98,7 +98,7 @@ riga:0 "Urban"
 riga_desc:0 "-"
 
 paris:0 "Urban"
-paris_desc:0 "Home of the Damn French"
+paris_desc:0 "-"
 
 sofia:0 "Urban"
 sofia_desc:0 "-"
@@ -204,6 +204,9 @@ london_desc:0 "-"
 
 warsaw:0 "Urban"
 warsaw_desc:0 "-"
+
+petrograd:0 "Urban"
+petrograd_desc:0 "-"
 
 ### Hills ###
 gibraltar:0 "Hills"
