Shits a bit fucked up and some 2 million argentinians are missing :thinbing: but at least the map should be correct

--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -277,7 +277,7 @@ STATE_274:0 "Goldküste"
 STATE_275:0 "Transvaal"
 STATE_276:0 "Southern Ontario"
 STATE_277:0 "Mexico City"
-STATE_278:0 "Pampas"
+STATE_278:0 "Buenos Aires"
 STATE_279:0 "Santiago"
 STATE_280:0 "Mato Grosso"
 STATE_281:0 "Malediven"
@@ -508,7 +508,7 @@ STATE_505:0 "Goias"
 STATE_506:0 "Antofagasta"
 STATE_507:0 "Magallanes"
 STATE_508:0 "Tucuman"
-STATE_509:0 "Chaco Austral"
+STATE_509:0 "Santiago del Estero"
 STATE_510:0 "Entre Ríos"
 STATE_511:0 "Mendoza"
 STATE_512:0 "Patagonia"
@@ -900,3 +900,7 @@ STATE_897:0 "Amapá"
 STATE_898:0 "Pará"
 STATE_899:0 "Roraima"
 STATE_900:0 "Rondônia"
+STATE_901:0 "Chaco Austral"
+STATE_902:0 "Córdoba"
+STATE_903:0 "Jujuy"
+STATE_904:0 "La Rioja"
