Improved Consistency in Ideology opinion modifiers

--- a/localisation/KR_Political_l_english.yml
+++ b/localisation/KR_Political_l_english.yml
@@ -184,5 +184,6 @@ kr.political.40.a:0 "Seriously, report it."
 
 KR_different_ideology:0 "Different Ideology"
 KR_similar_ideology:0 "Similar Ideology"
-same_ruling_party:0 "Same Ideology"
+KR_same_ideology:0 "Same Ideology"
+same_ruling_party:0 "Base"
 different_party_types:0 "Base"
