Added descriptions for some of Ireland's ideas and fixed a few errors

--- a/localisation/KR_Ireland_l_english.yml
+++ b/localisation/KR_Ireland_l_english.yml
@@ -117,7 +117,7 @@ IRE_TNTN3_desc:0 "Our modern railway system is helping to rapidly transport good
 # Industry Wing
 IRE_IFI:0 "Industry for Ireland"
 IRE_IFI_desc:0 "Our civilian industry has an enormous potential for growth. There is a major unemployment problem in our nation, with many families too poor to regularly feed themselves. By revitalising our industry we can both create new jobs and improve the economic strength of our nation."
-ire.IFI.tt:0 "\nBegin an §Yindustrial revolution§! in Ireland.\n\n"
+ire.IFI.tt:0 "\nBegin §Yindustrialising§! in Ireland.\n\n"
 ire.64.t:0 "The IFI Initiative"
 ire.64.d:0 "The government have ordered that extensive funds be made available for the rapid industrialisation of our nation. Too many Irish men and women are without jobs. Many British-owned factories were closed down when Ireland gained her independence, and have since fallen into disrepair. Ireland's industry lacks any real focus or direction, despite the population being eager and ready to work. It is up to the government to decide just how much of an investment into the civilian industry they wish to make."
 ire.64.a:0 "A normal amount. Get the country back on her feet."
@@ -945,13 +945,21 @@ ire.227.a:0 "Maintain the revolutionary government!"
 
 ### FP Ideas ###
 IRE_FINAL_STRUGGLE:0 "The Final Struggle"
+IRE_FINAL_STRUGGLE_desc:0 "As Ireland openly declares hostility against Britain and prepares for war, the morale of the Irish people has been bolstered, readying themselves for the final battle of Irish freedom with the hope of at last avenging the many centuries of British tyranny over Ireland."
 IRE_AUTARKY:0 "Autarky"
+IRE_AUTARKY_desc:0 "Against all odds, the Irish economy has managed to soar from the ashes of British misrule and Ireland has become in many ways self-sufficient economically. Some of the restrictions on exports that helped to achieve this however were unpopular with Ireland's trading partners, and will affect their opinion of Irish reliability for years to come."
 IRE_USA_trade:0 "Irish-American Trade"
+IRE_USA_trade_desc:0 "While Irish-American relations were chilly at first as a result of differing alignments and American economic collapse, negotiations and trade between the two governments has begun and Irish-American relations are warming."
 IRE_USA_tech:0 "Irish-American Research"
+IRE_USA_tech_desc:0 "The support of the USA and many Irish-American intellectuals willing to aid the homeland of their ancestors has improved the technological development of Ireland."
 IRE_USA_ATC:0 "Atlantic Trade Commission"
+IRE_USA_ATC_desc:0 "In response to growing Irish-American relations, the two governments have agreed to form the Atlantic Trade Commission to oversee their trade, aiding the economies of both nations."
 IRE_REFUGEES:0 "Irish-American Refugees"
+IRE_REFUGEES_desc:0 "Ireland has accepted many Irish-American refugees fleeing the Second American Civil War. While they are welcomed by many and provide new workers and soldiers for the Irish nation, their influence may have long-running effects on Irish society."
 IRE_REFUGEE_WORK:0 "Refugee Work Programs"
+IRE_REFUGEE_WORK_desc:0 "In response to unemployment among the Irish-American refugees, the Irish government has decided to create work programs in order to employ the refugees and reduce social tensions."
 IRE_REFUGEE_FIGHT:0 "Refugee Brigades"
+IRE_REFUGEE_FIGHT_desc:0 "In response to unemployment among the Irish-American refugees, the Irish government has decided to organise military recruitment programs, reducing unemployment and social tensions while increasing the size of the army."
 IRE_USA_PACT:0 "Irish-American Treaty"
 
 # Focus Tree - Military
@@ -1113,14 +1121,23 @@ IRE_ORGANISEPARTISANS_desc:0 "Now that we are at war, we must mobilise our reser
 
 #Ideas
 IRE_HONOURABLE_ARMY:0 "An Honourable Army"
+IRE_HONOURABLE_ARMY_desc:0 "The Irish army has chosen to adapt to the tactics and discipline of a professional army."
 IRE_PEOPLES_ARMY:0 "A People's Army"
+IRE_PEOPLES_ARMY_desc:0 "The Irish army has choosen to adapt the tactics of the War of Independence."
 IRE_FIGHTING_IRISH:0 "The Fighting Irish"
+IRE_FIGHTING_IRISH_desc:0 "The aid of foreign Irish soldiers has improved the training of the Irish military."
 IRE_OFFICER_SCHOOL:0 "Officer School"
+IRE_OFFICER_SCHOOL_desc:0 "The establishment of an officer school has aided the training of both old officers from the War of Independence and new candidates."
 IRE_BLUESHIRTS:0 "The Army Comrades Association"
+IRE_BLUESHIRTS_desc:0 "The Army Comrades Association, also known by their nickname, the Blueshirts, is a paramilitary orginisation under the control of the Taoiseach Eoin O'Duffy, recruiting among only the native Irish who profess the Christian faith. The Irish government has integrated the ACA into their security forces, for the defense of Ireland and hunting down syndicalists and other internal threats."
 IRE_BLUEBLOUSES:0 "The Blueblouses"
+IRE_BLUEBLOUSES_desc:0 "The Blueblouses are the nickname for the women's branch of the Army Comrades Association. Inspired by the Cumann na mBan and to compensate for Ireland's low population in comparison to its enemies, the Blueblouses have been allowed to serve in the Irish Army. This however is not popular among traditionalists."
 IRE_ICA:0 "The Irish Citizen Army"
+IRE_ICA_desc:0 "The Irish Citizen Army played a large part in the Easter Rising, however the organisation was banned and their legacy was covered up after an attempted insurrection in 1923. Having played a part in resisting Collins, they have been integrated by the new government for defending Ireland and hunting reactionaries."
 IRE_CNM:0 "Female Soldiers"
+IRE_CNM_desc:0 "Inspired by the Irish Citizen Army and the Cumann na mBan of 1916, the Irish government has conscripted women into the army alongside men. However, this news is recieved very poorly among traditionalists, and further destabilises the new Irish republic."
 IRE_LAST_STAND:0 "Come Woe or Weal"
+IRE_LAST_STAND_desc:0 "Ireland is once again alone at war against the British, and the survival of Irish independence looks unlikely. With nothing to lose the Irish people are willing to fight until the end."
 
 # Military Events
 ire.211.t:0 "Dissolution of the ACA"
