--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -358,6 +358,12 @@ ukraine.74.a:0 "Curse them!"
 ukraine.74.b:0 "We shall destroy them!"
 ukraine.74.c:0 "Curse them!"
 ukraine.74.e:0 "We shall destroy them!"
+ukraine.76.t:0 "White Guard"
+ukraine.76.d:0 "'The White Guard' ('Belaya Gvardiya') is a film, based on the novel written by the leader of the pro-Russian movement Mikhail Bulgakov. The story of the film describes the life of one Russian family in Kiev just after the German occupation in 1918. The main characters are the Russian officers and Ukrainian citizens, who participate in the defence of Kiev from the disloyal to the new regime forces of Ukrainian Nationalists and different socialist groups as the soldiers of the army of Hetman Skoropadsky. The film analyses the relations between the Russians and the Ukrainians. Conceived by Bulgakov as a symbol of the national reconciliation, 'The White Guard' encourages the unity of the Kingdom and friendship of its people, thought some radical groups of the local nationalists consider this film to be a Russian propaganda."
+ukraine.76.a:0 "Long live our people, united and free!"
+ukraine.77.t:0 "Rifles and carbines"
+ukraine.77.d:0 "Produced by Alexander Dovzhenko film 'Rifles and carbines' ('Gvintivki ta karabini') is devoted to the story of the struggle between the Russian White forces under General Drozdovsky and the forces of the Ukrainian Kingdom in 1918 in the southern part of Ukraine during Iassy-Don March. The film, which was conceived to be an answer to the Bulgakov's 'White Guard' don't try to point out the possible ways of the reconciliation, but shows that the potential separatists and spies of the foreign powers still hide among the Ukrainian population and can try to take power in the country, if Ukraine will become weaker."
+ukraine.77.a:0 "Death to the enemies of Ukraine!"
 
 ### Focuses ###
 
