get rid of \n marks

--- a/localisation/KR_Spain_Carlist_l_english.yml
+++ b/localisation/KR_Spain_Carlist_l_english.yml
@@ -99,15 +99,15 @@ CAR_can_invite_faction:0 "There is a country who can be invited into a faction\n
 CAR_totalist_party:0 "POUM"
 CAR_totalist_party_long:0 "Partido Obrero de Unificación Marxista"
 CAR_syndicalist_party:0 "CNT-FAI"
-CAR_syndicalist_party_long:0 "Confederación Nacional del Trabajo - \nFederación Anarquista Ibérica"
+CAR_syndicalist_party_long:0 "Confederación Nacional del Trabajo - Federación Anarquista Ibérica"
 CAR_radical_socialist_party:0 "Caballeistas"
 CAR_radical_socialist_party_long:0 "Caballeistas"
 CAR_social_democrat_party:0 "Prietistas"
 CAR_social_democrat_party_long:0 "Prietistas"
 CAR_social_liberal_party:0 "Izquierda Republicana"
-CAR_social_liberal_party_long:0 "Izquierda Republicana, \nthe Republican Left"
+CAR_social_liberal_party_long:0 "Izquierda Republicana - the Republican Left"
 CAR_market_liberal_party:0 "PLM"
-CAR_market_liberal_party_long:0 "Partido Liberal Moderado, \nthe Moderate Liberal Party"
+CAR_market_liberal_party_long:0 "Partido Liberal Moderado - the Moderate Liberal Party"
 CAR_social_conservative_party:0 "Acción Popular"
 CAR_social_conservative_party_long:0 "The Moderate Section of the Acción Popular"
 CAR_authoritarian_democrat_party:0 "Acción Popular"
