--- a/localisation/KR_Spain_FAI_l_english.yml
+++ b/localisation/KR_Spain_FAI_l_english.yml
@@ -81,15 +81,15 @@ CNT_portugal_desc:0 "Our Iberian Federation will never be complete until we spre
 CNT_totalist_party:0 "POUM"
 CNT_totalist_party_long:0 "Partido Obrero de Unificación Marxista"
 CNT_syndicalist_party:0 "CNT-FAI"
-CNT_syndicalist_party_long:0 "Confederación Nacional del Trabajo - \nFederación Anarquista Ibérica"
+CNT_syndicalist_party_long:0 "Confederación Nacional del Trabajo - Federación Anarquista Ibérica"
 CNT_radical_socialist_party:0 "Caballeistas"
 CNT_radical_socialist_party_long:0 "Caballeistas"
 CNT_social_democrat_party:0 "Prietistas"
 CNT_social_democrat_party_long:0 "Prietistas"
 CNT_social_liberal_party:0 "Izquierda Republicana"
-CNT_social_liberal_party_long:0 "Izquierda Republicana, \nthe Republican Left"
+CNT_social_liberal_party_long:0 "Izquierda Republicana, the Republican Left"
 CNT_market_liberal_party:0 "PLM"
-CNT_market_liberal_party_long:0 "Partido Liberal Moderado, \nthe Moderate Liberal Party"
+CNT_market_liberal_party_long:0 "Partido Liberal Moderado - the Moderate Liberal Party"
 CNT_social_conservative_party:0 "Acción Popular"
 CNT_social_conservative_party_long:0 "The Moderate Section of the Acción Popular"
 CNT_authoritarian_democrat_party:0 "Acción Popular"
