--- a/localisation/KR_Ministers_l_english.yml
+++ b/localisation/KR_Ministers_l_english.yml
@@ -16266,6 +16266,9 @@
 	 ENG_William_Joyce_hog_tot:0 "William Joyce"
 	 William_Joyce_dead:0 " is incapable of holding any posts."
 	 William_Joyce_hog_fired:0 " is incapable of holding this post."
+	 ENG_Annie_Kenney_hog_syn:0 "Annie Kenney"
+	 Annie_Kenney_dead:0 " is incapable of holding any posts."
+	 Annie_Kenney_hog_fired:0 " is incapable of holding this post."
 	 ENG_Sylvia_Pankhurst_hog_syn:0 "Sylvia Pankhurst"
 	 Sylvia_Pankhurst_dead:0 " is incapable of holding any posts."
 	 Sylvia_Pankhurst_hog_fired:0 " is incapable of holding this post."
@@ -16278,6 +16281,9 @@
 	 ENG_Barbara_Castle_hog_syn:0 "Barbara Castle"
 	 Barbara_Castle_dead:0 " is incapable of holding any posts."
 	 Barbara_Castle_hog_fired:0 " is incapable of holding this post."
+	 ENG_Christabel_Pankhurst_hog_syn:0 "Christabel Pankhurst"
+	 Christabel_Pankhurst_dead:0 " is incapable of holding any posts."
+	 Christabel_Pankhurst_hog_fired:0 " is incapable of holding this post."
 	 ENG_Eleanor_Rathbone_hog_syn:0 "Eleanor Rathbone"
 	 Eleanor_Rathbone_dead:0 " is incapable of holding any posts."
 	 Eleanor_Rathbone_hog_fired:0 " is incapable of holding this post."
@@ -16486,6 +16492,9 @@
 	 ENG_Abe_Moffat_eco_syn:0 "Abe Moffat"
 	 Abe_Moffat_dead:0 " is incapable of holding any posts."
 	 Abe_Moffat_eco_fired:0 " is incapable of holding this post."
+	 ENG_Annie_Kenney_eco_syn:0 "Annie Kenney"
+	 Annie_Kenney_dead:0 " is incapable of holding any posts."
+	 Annie_Kenney_eco_fired:0 " is incapable of holding this post."
 	 ENG_Sylvia_Pankhurst_eco_syn:0 "Sylvia Pankhurst"
 	 Sylvia_Pankhurst_dead:0 " is incapable of holding any posts."
 	 Sylvia_Pankhurst_eco_fired:0 " is incapable of holding this post."
@@ -39394,7 +39403,7 @@
 	 POL_Adam_Doboszynski_hog_npo:0 "Adam Doboszyñski"
 	 Adam_Doboszynski_dead:0 " is incapable of holding any posts."
 	 Adam_Doboszynski_hog_fired:0 " is incapable of holding this post."
-	 POL_Marian_Januszajtis_egota_hog_npo:0 "Marian Januszajtis ¯egota"
+	 POL_Marian_Januszajtis_egota_hog_npo:0 "Marian Januszajtis Żegota"
 	 Marian_Januszajtis_egota_dead:0 " is incapable of holding any posts."
 	 Marian_Januszajtis_egota_hog_fired:0 " is incapable of holding this post."
 	 POL_Tadeusz_Bielecki_hog_npo:0 "Tadeusz Bielecki"
@@ -39725,16 +39734,13 @@
 	 POL_Tadeusz_Rozwadowski_mhc_ade:0 "Tadeusz Rozwadowski"
 	 Tadeusz_Rozwadowski_dead:0 " is incapable of holding any posts."
 	 Tadeusz_Rozwadowski_mhc_fired:0 " is incapable of holding this post."
-	 POL_Wacaw_Stachiewicz_mhc_ade:0 "Wac³aw Stachiewicz"
+	 POL_Wacaw_Stachiewicz_mhc_ade:0 "Wacław Stachiewicz"
 	 Wacaw_Stachiewicz_dead:0 " is incapable of holding any posts."
 	 Wacaw_Stachiewicz_mhc_fired:0 " is incapable of holding this post."
 	 POL_Wladyslaw_Sikorski_mhc_ade:0 "Wladyslaw Sikorski"
 	 Wladyslaw_Sikorski_dead:0 " is incapable of holding any posts."
 	 Wladyslaw_Sikorski_mhc_fired:0 " is incapable of holding this post."
-	 POL_Jozef_Haller_von_Hallenburg_mhc_pau:0 "Józef Haller von Hallenburg"
-	 Jozef_Haller_von_Hallenburg_dead:0 " is incapable of holding any posts."
-	 Jozef_Haller_von_Hallenburg_mhc_fired:0 " is incapable of holding this post."
-	 POL_Marian_Januszajtis_egota_mhc_npo:0 "Marian Januszajtis ¯egota"
+	 POL_Marian_Januszajtis_egota_mhc_npo:0 "Marian Januszajtis Żegota"
 	 Marian_Januszajtis_egota_dead:0 " is incapable of holding any posts."
 	 Marian_Januszajtis_egota_mhc_fired:0 " is incapable of holding this post."
 
@@ -39766,10 +39772,7 @@
 	 POL_Wladyslaw_Sikorski_carm_ade:0 "Wladyslaw Sikorski"
 	 Wladyslaw_Sikorski_dead:0 " is incapable of holding any posts."
 	 Wladyslaw_Sikorski_carm_fired:0 " is incapable of holding this post."
-	 POL_Jozef_Haller_von_Hallenburg_carm_pau:0 "Józef Haller von Hallenburg"
-	 Jozef_Haller_von_Hallenburg_dead:0 " is incapable of holding any posts."
-	 Jozef_Haller_von_Hallenburg_carm_fired:0 " is incapable of holding this post."
-	 POL_Marian_Januszajtis_egota_carm_npo:0 "Marian Januszajtis ¯egota"
+	 POL_Marian_Januszajtis_egota_carm_npo:0 "Marian Januszajtis Żegota"
 	 Marian_Januszajtis_egota_dead:0 " is incapable of holding any posts."
 	 Marian_Januszajtis_egota_carm_fired:0 " is incapable of holding this post."
 
