completed Annie Kenney reversion

--- a/localisation/KR_Union_of_Britain_l_english.yml
+++ b/localisation/KR_Union_of_Britain_l_english.yml
@@ -504,7 +504,7 @@ uob.101.ab:0 "A compromise with the Maximists is in order"
 uob.101.ac:0 "Niclas y Glais would make a much better general secretary"
 uob.101.ad:0 "Eric Blair is the best choice in this matter"
 uob.101.ae:0 "Arthur Horner would make a much better general secretary"
-uob.101.af:0 "Eleanor Rathbone will improve women's rights all over Britain"
+uob.101.af:0 "Christabel Pankhurst will improve women's rights all over Britain"
 uob.101.ag:0 "Lewis Jones would make a much better general secretary"
 uob.101.ah:0 "I have total confidence in the abilities of Tom Mann"
 uob.102.t:0 "Merge the Posts of Chairman & General Secretary"
@@ -763,7 +763,7 @@ uob.356.t:0 "Time for a change in leadership?"
 uob.356.d:0 "Comrade Mosley saluted the Congress on their wise decisions so far. Maximism has led us well through this war and is still popular - but the people are growing tired of authoritarianism, and elements in the Maximists and the Congregationalists are seeking to propose a new liberal way forward."
 uob.356.a:0 "Mosleys Maximism triumphs again!"
 uob.356.b:0 "Maximist liberals Eric Blair and Phil Piratin defeat Mosley!"
-uob.356.c:0 "Shock! Sylvia Pankhurst and Barbara Castle win a landslide!"
+uob.356.c:0 "Shock! Annie Kenney and Barbara Castle win a landslide!"
 uob.356.d:0 "Chairman-for-Life! Rule per decree!"
 uob.357.t:0 "Time for a change in leadership?"
 uob.357.d:0 "Comrade Kenney has shown mettle like that of Elizabeth I as she led us reluctantly through this war. Today, however, she looks tired and unlikely to win re-election. Perhaps she can, though, if she looks to more unconventional allies..."
@@ -861,11 +861,11 @@ uobflavour.21.d:0 "After the recent death of our General Secretary it will be ne
 uobflavour.21.a:0 "G.D.H. Cole will continue Blair's behind the scenes work"
 uobflavour.21.b:0 "Phil Piratin! It is time for a more liberal Maximist voice"
 uobflavour.21.c:0 "Nye Bevan will build a worker's paradise in Blair's honour"
-uobflavour.21.d:0 "Harry Pollitt will keep the Unions happy"
-uobflavour.21.e:0 "Barbara Castle will continue the behind the scenes work"
+uobflavour.21.e:0 "Harry Pollitt will keep the Unions happy"
+uobflavour.21.f:0 "Barbara Castle will continue the behind the scenes work"
 #uobflavour.21.f:0 "Denis Healey will get the most out of Britain"
-#uobflavour.21.g:0 "Tony Benn, up and coming son of William, gets his chance"
-uobflavour.21.h:0 "Eleanor Rathbone! It's time for more women in the top jobs"
+uobflavour.21.g:0 "Tony Benn, up and coming son of William, gets his chance"
+uobflavour.21.h:0 "Christabel Pankhurst! It's time for more women in the top jobs"
 uobflavour.22.t:0 "General Secretary Maxton passes away"
 uobflavour.22.d:0 "The General Secretary, James Maxton, has died after a lifetime serving the workers of Britain. The Union of Britain mourns this immeasurable loss."
 uobflavour.22.a:0 "Memento mori."
@@ -878,8 +878,8 @@ uobflavour.24.a:0 "Memento mori."
 uobflavour.25.t:0 "General Secretary Bevan passes away"
 uobflavour.25.d:0 "The General Secretary, Nye Bevan, has died after a lifetime serving the workers of Britain. The Union of Britain mourns this immeasurable loss."
 uobflavour.25.a:0 "Memento mori."
-uobflavour.26.t:0 "General Secretary Rathbone passes away"
-uobflavour.26.d:0 "The General Secretary, Eleanor Rathbone, has died after a lifetime serving the workers of Britain. The Union of Britain mourns this immeasurable loss."
+uobflavour.26.t:0 "General Secretary Pankhurst passes away"
+uobflavour.26.d:0 "The General Secretary, Christabel Pankhurst, has died after a lifetime serving the workers of Britain. The Union of Britain mourns this immeasurable loss."
 uobflavour.26.a:0 "Memento mori."
 uobflavour.27.t:0 "General Secretary Mann passes away"
 uobflavour.27.d:0 "The General Secretary, Tom Mann, has died after a lifetime serving the workers of Britain. The Union of Britain mourns this immeasurable loss."
@@ -890,8 +890,8 @@ uobflavour.28.a:0 "You will be missed, comrade."
 uobflavour.29.t:0 "Aneurin Bevan passes away"
 uobflavour.29.d:0 "The well known Welsh labour activist Aneurin Bevan has died after a lifetime serving the workers of Britain. The Union of Britain mourn this immeasurable loss."
 uobflavour.29.a:0 "Memento mori."
-uobflavour.30.t:0 "Sylvia Pankhurst passes away"
-uobflavour.30.d:0 "The famous suffragette Sylvia Pankhurst has died after a lifetime serving the workers of Britain. The Union of Britain mourn this immeasurable loss."
+uobflavour.30.t:0 "Annie Kenney passes away"
+uobflavour.30.d:0 "The famous suffragette Annie Kenney has died after a lifetime serving the workers of Britain. The Union of Britain mourn this immeasurable loss."
 uobflavour.30.a:0 "Memento mori."
 uobflavour.31.t:0 "Alan Brooke passes away"
 uobflavour.31.d:0 "The renowned Commander Alan Brooke has died after a lifetime serving the workers of Britain. The Union of Britain mourn this immeasurable loss."
