Localization for the USA election events

--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -1425,71 +1425,73 @@ ustates.216.d:0 "The Great Lakes Federation want to secure their independence vi
 ustates.216.a:0 "Accept their offer!"
 ustates.216.b:0 "Refuse their alliance, we don't need anyone!"
 
+ustates.217.t:0 "[GetYear] Presidential Election"
+ustates.217.d.dead_curtis:0 "With the civil war at an end it is time for the Presidential Elections of [GetYear] to begin. Quentin Roosevelt has been the president of the United States since President Charles Curtis died during the civil war. Quentin Roosevelt has steered the country to victory in the Civil War. John Nancer Garner has come out of the shadows to try and win the elections for the Democrats. However he is clearly the underdog in this race as Quentin Roosevelt is the clear favorite. "
+ustates.217.d.civil_war:0 "The civil war is now at an End and the Presidential election of [GetYear] is beginning. Charles Curtis has decided to not run for the Presidency. Having steered America through the hellish chaos that was the civil war he plans to let his young VP Quentin Roosevelt run instead. Meanwhile John Nance Garner has returned in order to have an alternative path now that peace has returned to America. "
+ustates.217.d.no_war:0 "The elections of [GetYear] are about to begin. Since the start of the Fair deal the republicans have been enjoying immense support throughout the country. Especially since the political crisis of 1936 is over. President Charles Curtis is not seeking re-election instead Vice-President Quentin Roosevelt shall be running while John Nance Garner has decided to give it another shot at running for running for president. Whom shall the people choose. "
+ustates.217.a:0 "Quentin Roosevelt"
+ustates.217.b:0 "John Nance Garner"
+ustates.218.t:0 "[GetYear] Presidential Election"
+ustates.218.d.roosevelt_reelection:0 "The elections of [GetYear] are about to begin. With Quentin Roosevelt having won the last election he looks to be able to easily win the election of [GetYear]. The Democrats have nominated Cordell Hull as their choice to try and defeat Roosevelt though it looks to be a challenge for Hull"
+ustates.218.d.garner_reelection:0 "The elections of [GetYear] are about to begin. With John Nance Garner unexpectedly winning the Election of [GetYear] he has sought re-election. To counter him, the Republicans have nominated Robert Taft. Garner looks expected to win but Taft has plenty of support as well."
+ustates.218.a:0 "Reelect Quentin Roosevelt"
+ustates.218.b:0 "Reelect John Nance Garner"
+ustates.218.c:0 "Go with Robert Taft"
+ustates.218.e:0 "Go with Cordell Hull"
+ustates.219.t:0 "[GetYear] Presidential Election"
+ustates.219.d.roosevelt_reelected:0 "Quentin Roosevelt unsuprisingly won reelection in the last election. While some were advoctating for him to take the unprecedent move of a third term, he has decided to step aside and allow Thomas Dewey to take the reins of the Republican Party and run for President in [GetYear]. The Democrats meanwhile have nominated Alben W. Barkley as their choice for president this year."
+ustates.219.d.taft_elected:0 "Robert Taft in the last election allowed the Republican party to win re-election. He is on track to win the election of [GetYear] with most support behind him. To oppose him Cordell Hull has been nominated by the Democratic Party to counter him. "
+ustates.219.d.garner_reelected:0 "With the election of [GetYear] coming up Garner has decided not to stand for re-election but instead will be supporting the democratic nominee of Alben W. Barkley. The Republicans have decided to nominate Thomas Dewey as their candidate of choice for the election of [GetYear]. Whom shall the voters choose? "
+ustates.219.d.hull_elected:0 "With Cordell Hull winning the election he has decided to seek re-election in the Presidential election of [GetYear]. The Republicans meanwhile have decided to nominate Thomas Dewey as their candidate for the presidential election. "
+ustates.219.a:0 "Go with Thomas Dewey"
+ustates.219.b:0 "Go with Robert Taft"
+ustates.219.c:0 "Go with Alben W. Barkley"
+ustates.219.e:0 "Go with Cordell Hull"
+ustates.220.t:0 "[GetYear] Presidential Election"
+ustates.220.d:0 "With the civil war now over, the time for the presidential election is now at hand. Garner has decided to stand for re-election. Thomas Dewey has emerged as the candidate for the republican party, who is claiming that while Garner helped preserve the Union it is time for the Republicans to lead in peace.  "
+ustates.220.a:0 "Go with Thomas Dewey"
+ustates.220.b:0 "Re-elect John Nance Garner"
 
+ustates.221.t:0 "[GetYear] Presidential Election"
+ustates.221.d.dewey_elected:0 "While many were grateful for the Garner for protecting the Union and ending the civil war, Thomas Dewey's platform of being the leader for peace won out in the election. Now it is time for the [GetYear] Presidential Election. Thomas Dewey is standing for re-election while the democrats have nominated  Cordell Hull as their candidate. Whom shall the voters choose?"
+ustates.221.d.garner_elected:0 "Unsurprising John Nance Garner won re-election. In a surprising move he has decided to seek re-election for a third time. This has surprised everyone and people are wondering if he will win this unprecedented move. To oppose him the Republicans have nominated Robert Taft. "
+ustates.221.a:0 "Go with Thomas Dewey"
+ustates.221.b:0 "Go with Robert Taft"
+ustates.221.c:0 "Go with John Nance Garner"
+ustates.221.e:0 "Go with Cordell Hull"
 
+ustates.222.t:0 "[GetYear] Presidential Election"
+ustates.222.d.dewey_reelected:0 "Thomas Dewey won re-election and with the [GetYear] Presidential Election going on, he has decided to not seek a third term and the republicans have nominated Frank Knox to continue the success that Dewey has done during his term. Meanwhile the Democrats have nominated Alben W. Barkley."
+ustates.222.d.garner_again:0 "Garner has managed to do what no other President has done before win a third term. He however has decided not to run for a fourth term instead letting Alben W. Barkley run as the Democrat candidate for the [GetYear]. Opposing him from the Republican Party is Frank Knox. "
+ustates.222.d.taft_elected:0 "Robert Taft managed to stop Garner from having a third term, he has decided to seek a second term. The democrats have decided to nominate Cordell Hull to oppose him. "
+ustates.222.d.hull_elected:0 "With Coredell Hull's victory in the last election, he has decided to seek a second term. The republicans have decided to nominate Robert Taft to oppose him. Whom shall the voters choose?"
+ustates.222.a:0 "Go with Frank Knox"
+ustates.222.b:0 "Go with Robert Taft"
+ustates.222.c:0 "Go with Alben W. Barkley"
+ustates.222.e:0 "Go with Cordell Hull"
 
+ustates.223.t:0 "[GetYear] Presidential Election"
+ustates.223.d:0 "In a surprising move, Douglas MacArthur has stepped down from power and has restored democracy. Some have thought he would seek to run for office himself but he has declined that. The democrats have nominated Alben W. Barkley while the Republicans have nominated Quentin Roosevelt. Whom shall the voters choose?"
+ustates.223.a:0 "Go with Alben W. Barkley"
+ustates.223.b:0 "Go with Quentin Roosevelt"
 
+ustates.224.t:0 "[GetYear] Presidential Election"
+ustates.224.d.barkley_elected:0 "In the first free election since democracy was restored Alben W. Barkley won his election. He has decided to seek re-election. Opposing him is Robert Taft from the Republican party. Whom shall the people choose?"
+ustates.224.d.roosevelt_elected:0 "In the first free election since democracy was restored Quentin Roosevelt won his election. He has decided to seek re-election. Opposing him is Coredell Hull from the Democratic party. Whom shall the people choose?"
+ustates.224.a:0 "Re-elect Alben Barkley"
+ustates.224.b:0 "Re-elect Quentin Roosevelt"
+ustates.224.c:0 "Elect Cordell Hull"
+ustates.224.e:0 "Elect Robert Taft"
 
-
-
-
-
-
-
-ustates.217.t:0 "The Elections of 1940. Roosevelt vs. Garner"
-ustates.217.d:0 "The Civil War is finally at an end and many Americans see the upcoming elections as a sign the country is finally recovering. President Curtis will not seek reelection because of his weak health. Vice president Roosevelt is leading the polls, but the tough Texan Garner is not willing to go down without a fight..."
-ustates.217.a:0 "Quentin Roosevelt/Fiorello H. La Guardia (Rep.)"
-ustates.217.b:0 "John Nance Garner/Harry Trumen (Dem.)"
-ustates.21700.d:0 "The Civil War is finally at an end and many Americans see the upcoming elections as a sign the country is finally recovering. Quentin Roosevelt, who became president after the death of president Curtis in office, is leading the polls, but the tough Texan Garner is not willing to go down without a fight..."
-
-ustates.218.t:0 "The Elections of 1940. Garner vs. Knox"
-ustates.218.d:0 "The Civil War is finally at an end and many Americans see the upcoming elections as a sign the country is finally recovering. President Garner has lead the country through this great ordeal and hopes to win reelection. The Republicans have nominated equally tough Frank Knox to show the nation they too can take a tough stance."
-ustates.218.a:0 "John Nance Garner/Harry Trumen(Dem.)"
-ustates.218.b:0 "Frank Knox/Thomas Dewey (Rep.)"
-
-ustates.219.t:0 "The Elections of 1940. MacArthur vs. Garner"
-ustates.219.d:0 "The Civil War is finally at an end and General MacArthur has put down his dictatorial powers in order to restore democracy. The Republicans have asked the General to run for president on their behalf. However, many wonder if MacArthur will be as able a leader in times of peace as he was in times of war."
-ustates.219.a:0 "Douglas MacArthur/Quentin Roosevelt (Rep.)"
-ustates.219.b:0 "John Nance Garner/Henry Wallace (Dem.)"
-
-ustates.220.t:0 "The Elections of 1944. Dewey vs. Hull"
-ustates.220.d:0 "President Knox has decided not to run for reelection because of his steadily worsening health. His VP, Thomas Dewey quickly won the Republican nomination. The Democrats nominated experienced Cordell Hull to run against the young Dewey."
-ustates.220.a:0 "Thomas E. Dewey/John Bricker (Rep.)"
-ustates.220.b:0 "Cordell Hull/Harry S. Truman (Dem.)"
-
-ustates.221.t:0 "The Elections of 1944. Wallace vs. Taft"
-ustates.221.d:0 "After two successful terms, it was time for the Democrats to find a new man to lead them. Henry Wallace was the natural choice to run for president. Wallace's opponent, the formidable senator Robert Taft, was quick to accuse Wallace of being a 'Syndicalist sympathiser' and a new Reed. This started of the dirtiest campaign in American history."
-ustates.221.a:0 "Henry Wallace/Alben W. Barkley (Dem.)"
-ustates.221.b:0 "Robert Taft/Strom Thurmond (Rep.)"
-
-ustates.222.t:0 "The Elections of 1944. MacArthur vs. Hull"
-ustates.222.d:0 "President MacArthur proved to be an able but controversial leader. His unforgiving stance against former Syndicalists and American Firsters alike lead many to believe it was Mac himself who prevented the nation from fully recovering. Cordell Hull promised to become a president for all Americans and his message was catching on..."
-ustates.222.a:0 "Douglas MacArthur/John Bricker (Rep.)"
-ustates.222.b:0 "Cordell Hull/Averell Harriman (Dem.)"
-
-ustates.223.t:0 "The Elections of 1948. Dewey vs. Wallace"
-ustates.223.d:0 "With the experience Hull being unable to beat Dewey four years earlier, the Democrats now tried to win the presidency with the dynamic reformer Henry Wallace."
-ustates.223.a:0 "Thomas Dewey/John Bricker (Rep.)"
-ustates.223.b:0 "Henry Wallace/Averell Harriman (Dem.)"
-
-ustates.224.t:0 "The Elections of 1948. Bricker vs. Wallace"
-ustates.224.d:0 "MacArthur's second tenure in office was rife with conflicts between the general and the Republican party. In the end MacArthur left the world of politics disillusioned, refusing to support any candidate. The Republican favourite son Bricker won the nomination, but could the GOP fend off Wallace once again?"
-ustates.224.a:0 "John Bricker/Strom Thurmond (Rep.)"
-ustates.224.b:0 "Henry Wallace/Adlai Stevenson (Dem.)"
-
-ustates.225.t:0 "The Elections of 1948. Taft vs. Barkley"
-ustates.225.d:0 "The election of President Taft in 1944 proved that the country wished for stability above all else. In order to beat Taft, the Democrats nominated experienced Kentucky senator Alben W. Barkley."
-ustates.225.a:0 "Robert Taft/John Bricker (Rep.)"
-ustates.225.b:0 "Alben W. Barkley/Adlai Stevenson (Dem.)"
-
-ustates.226.t:0 "The Elections of 1948. Harriman vs. Thurmond"
-ustates.226.d:0 "Cordell Hull retired from politics after just one term in the White House, citing ill health as the reason. His former VP, Averell Harriman however is seen as a dangerous liberal by most Republicans. They hope Senator Taft can prevent this man from ruining the country."
-ustates.226.a:0 "W. Averell Harriman/Adlai Stevenson (Dem.)"
-ustates.226.b:0 "Robert Taft/Strom Thurmond (Rep.)"
-ustates.227.t:0 "The Elections of 1948. Wallace vs. Thurmond"
-ustates.227.d:0 "President Wallace had tried hard to reform America in a country where all Americans could live side by side once again. However, many of his reforms had proven to be very unpopular, especially his attempts at ending segregation in the South. The Republicans tried to take advantage of the controversy by nominating Strom Thurmond as their candidate."
-ustates.227.a:0 "Henry Wallace/Harry Truman (Dem.)"
-ustates.227.b:0 "Strom Thurmond/John Bricker (Rep.)"
+ustates.225.t:0 "[GetYear] Presidential Election"
+ustates.225.d.roosevelt_reelected:0 "Quentin Roosevelt won his re-election in the last election, however he has decided to follow in the tradition that existed before the civil war of their being only two terms for president. To succeed him the Republican party has chosen Thomas Dewey to lead them to victory. Opposing them is William Averell Harriman from the democratic party."
+ustates.225.d.barkley_reelected:0 "Alben Barkley won his re-election in the last election, however he has decided to follow in the tradition that existed before the civil war of their being only two terms for president. To succeed him the Democratic Party has chosen Coredell Hull to lead them to victory. To lead the republicans to victory is Thomas Dewey."
+ustates.225.d.taft_elected:0 "Robert Taft won his election and as such has decided to seek re-election. To oppose him the democrats have chosen William Averell Harriman whom shall the voters choose?"
+ustates.225.d.hull_elected:0 "Coredell Hull won his election and as such has decided to seek re-election. To oppose him the Republicans have chosen Thomas Dewey whom shall the voters choose?"
+ustates.225.a:0 "Elect William Averell Harriman"
+ustates.225.b:0 "Elect Thomas Dewey"
+ustates.225.c:0 "Elect Cordell Hull"
+ustates.225.e:0 "Elect Robert Taft"
 
 ustates.228.t:0 "One of our ministers has died"
 ustates.228.d:0 "Our nation mourns as one of our ministers passed away. Even now, our nation and the minister's office have to move onward. A new minister has to be put in office."
