Internet is acting up; SA Shipnames

--- a/localisation/KR_Equip_naval_l_english.yml
+++ b/localisation/KR_Equip_naval_l_english.yml
@@ -606,3 +606,103 @@ HOL_carrier_1:0 "Gouden Leeuw Class"
 HOL_carrier_2:0 "Gouden Draak Class"
 HOL_carrier_3:0 "Onoverwinnelijk Class"
 HOL_carrier_4:0 "Glorie Class"
+
+### Brazilian Navy ###
+BRA_submarine_pre:0 "Gê Class"
+BRA_submarine_1:0 "Tupi Class"
+BRA_submarine_2:0 "Guarani Class"
+BRA_submarine_3:0 "Tapajó Class"
+BRA_submarine_4:0 "Tamoío Class"
+
+BRA_destroyer_pre:0 "São Luis Class"
+BRA_destroyer_1:0 "Caxias Class"
+BRA_destroyer_2:0 "Raposo Class"
+BRA_destroyer_3:0 "Domingos Class"
+BRA_destroyer_4:0 "Voluntário Class"
+
+BRA_light_cruiser_pre:0 "Natal Class"
+BRA_light_cruiser_1:0 "Olinda Class"
+BRA_light_cruiser_2:0 "Juazeiro Class"
+BRA_light_cruiser_3:0 "Niterói Class"
+BRA_light_cruiser_4:0 "Santos Class"
+
+BRA_heavy_cruiser_pre:0 "Itaparica Class"
+BRA_heavy_cruiser_1:0 "Jenipápo Class"
+BRA_heavy_cruiser_1:0 "Uruguaiana Class"
+BRA_heavy_cruiser_3:0 "Húmaita Class"
+BRA_heavy_cruiser_4:0 "Riachuelo Class"
+
+BRA_battle_cruiser_pre:0 "Majé Class"
+BRA_battle_cruiser_1:0 "Grenfell Class"
+BRA_battle_cruiser_2:0 "Labatut Class"
+BRA_battle_cruiser_3:0 "Iguaçu Class"
+BRA_battle_cruiser_4:0 "Tamandaré Class"
+
+BRA_battleship_pre:0 "Minas Gerais Class"
+BRA_battleship_1:0 "São Paulo Class"
+BRA_battleship_2:0 "Bahia Class"
+BRA_battleship_3:0 "Ceará Class"
+BRA_battleship_4:0 "Amazonas Class"
+BRA_battleship_5:0 "Santa Catarina Class"
+BRA_battleship_6:0 "Guanabara Class"
+
+BRA_carrier_pre:0 "Bonifácio Class"
+BRA_carrier_1:0 "Tiradentes Class"
+BRA_carrier_2:0 "Rio Branco Class"
+BRA_carrier_3:0 "Dom Pedro II Class"
+BRA_carrier_4:0 "Osório Class"
+BRA_carrier_5:0 "Deodoro Class"
+BRA_carrier_6:0 "Brasil Class"
+
+BRA_SH_battleship_1:0 "Rio Grande Class"
+BRA_SH_battleship_2:0 "Rio de Janeiro Class"
+
+### Chilean Navy ###
+CHL_submarine_pre:0 "H Class"
+CHL_submarine_1:0 "I Class"
+CHL_submarine_2:0 "J Class"
+CHL_submarine_3:0 "L Class"
+CHL_submarine_4:0 "M Class"
+
+CHL_destroyer_pre:0 "Lynch Class"
+CHL_destroyer_1:0 "Chacabuco Class"
+CHL_destroyer_2:0 "Iquique Class"
+CHL_destroyer_3:0 "Chiloé Class"
+CHL_destroyer_4:0 "Tierra del Fuego Class"
+
+CHL_light_cruiser_pre:0 "Catalina Class"
+CHL_light_cruiser_1:0 "Oribe Class"
+CHL_light_cruiser_2:0 "Puerto Montt Class"
+CHL_light_cruiser_3:0 "Taparacá Class"
+CHL_light_cruiser_4:0 "Antofogasta Class"
+
+CHL_heavy_cruiser_pre:0 "O'Higgins Class"
+CHL_heavy_cruiser_1:0 "Valparaiso Class"
+CHL_heavy_cruiser_1:0 "Pérez Class"
+CHL_heavy_cruiser_3:0 "Balmaceda Class"
+CHL_heavy_cruiser_4:0 "Dartnell Class"
+
+CHL_battle_cruiser_pre:0 "Blanco Encalada Class"
+CHL_battle_cruiser_1:0 "Vicuña Class"
+CHL_battle_cruiser_2:0 "Ovalle Class"
+CHL_battle_cruiser_3:0 "Garmendia Class"
+CHL_battle_cruiser_4:0 "Arica Class"
+
+CHL_battleship_pre:0 "Latorre I Class"
+CHL_battleship_1:0 "Latorre II Class"
+CHL_battleship_2:0 "Manuel Montt Class"
+CHL_battleship_3:0 "Santiago Class"
+CHL_battleship_4:0 "Chilena Class"
+CHL_battleship_5:0 "Revolucíon Class"
+CHL_battleship_6:0 "Calais Class"
+
+CHL_carrier_pre:0 "Chochrane-B Class"
+CHL_carrier_1:0 "Rozas Class"
+CHL_carrier_2:0 "Rosales Class"
+CHL_carrier_3:0 "Carrera Class"
+CHL_carrier_4:0 "Arechavala	Class"
+CHL_carrier_5:0 "Pacifico Class"
+CHL_carrier_6:0 "Minero Class"
+
+CHL_SH_battleship_1:0 "Grove Class"
+CHL_SH_battleship_2:0 "Ramón Freire Class"
